dev/non_executable_reasons_record/193.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
%%bash
### å¤‰æ•°ã®è¨­å®š
name=GUISql
classpath=".:/home/prefuser/jupyter/python/jupyter_notebook/Java/postgresql-42.1.1.jar"
#classpath=".:/root/git_jupyter_notebook/Java/postgresql-42.1.1.jar"
#classpath=".:/Users/ftakao2007/jupyter/jupyter_notebook/Java/postgresql-42.1.1.jar"


### ã‚½ãƒ¼ã‚¹ã®ç·¨é›†
cat <<- EOS > ${name}.java

import java.awt.*;
import java.awt.event.*;
import java.sql.Connection;
import java.sql.DriverManager;
import java.sql.ResultSet;
import java.sql.ResultSetMetaData;
import java.sql.Statement;
//#import java.util.ArrayList;
//#import java.util.List;

class PrefFrame extends Frame implements ActionListener {
    //# ã‚³ãƒ³ãƒãƒ¼ãƒãƒ³ãƒˆã‚’å®šç¾©ã€‚å„ã‚¯ãƒ©ã‚¹ã®ãƒ¡ã‚½ãƒƒãƒ‰ãŒåˆ©ç”¨ã§ãã‚‹ã‚ˆã†ã«ãƒ¡ã‚½ãƒƒãƒ‰å¤–ã§å®šç¾©ã™ã‚‹
    Label lb1;
    TextArea txtar1;
    Button btn1, btn2, btn3;
    
    public PrefFrame(String title) {
        setTitle(title);

        addWindowListener(new WindowAdapter() {
            public void windowClosing(WindowEvent e) {
                System.exit(0);
            }
        });

        //# ãƒ©ãƒ™ãƒ«ã€‚BorderLayoutã®é ­ã«ãƒ©ãƒ™ãƒ«ã‚’è¡¨ç¤º
        lb1 = new Label("ãƒœã‚¿ãƒ³ã‚’ã‚¯ãƒªãƒƒã‚¯ã—ã¦ãã ã•ã„ã€‚",Label.CENTER);
        add(lb1, BorderLayout.NORTH);
        
        //# ãƒ†ã‚­ã‚¹ãƒˆã‚¨ãƒªã‚¢ã€‚BorderLayoutã®ä¸­å¤®ã«ãƒ†ã‚­ã‚¹ãƒˆã‚¨ãƒªã‚¢ã‚’è¡¨ç¤º
        txtar1 = new TextArea();
        add(txtar1, BorderLayout.CENTER);
        
        //# ãƒ‘ãƒãƒ«ã€‚GridLayoutã‚’æŒ‡å®š
        Panel pn1 = new Panel();
        pn1.setLayout(new GridLayout(1, 3));
        
        //# ãƒœã‚¿ãƒ³ã®è¨­å®šã¨ãƒ‘ãƒãƒ«ã¸è¿½åŠ 
        btn1 = new Button("è¡¨ç¤º");
        btn1.addActionListener(this);
        pn1.add(btn1);
        
        //# ãƒœã‚¿ãƒ³ã®è¨­å®šã¨ãƒ‘ãƒãƒ«ã¸è¿½åŠ 
        btn2 = new Button("ã‚¯ãƒªã‚¢");
        btn2.addActionListener(this);
        pn1.add(btn2);

        //# ãƒœã‚¿ãƒ³ã®è¨­å®šã¨ãƒ‘ãƒãƒ«ã¸è¿½åŠ 
        btn3 = new Button("çµ‚äº†");
        btn3.addActionListener(this);
        pn1.add(btn3);
        
        //# ãƒ‘ãƒãƒ«ã€‚BorderLayoutã®ä¸‹ã«ãƒ‘ãƒãƒ«ã‚’è¡¨ç¤º
        add(pn1, BorderLayout.SOUTH);
    }
  
    //# ã‚¤ãƒ™ãƒ³ãƒˆãŒç™ºç”Ÿã™ã‚‹ã¨å‘¼ã³å‡ºã•ã‚Œã‚‹ã‚¤ãƒ™ãƒ³ãƒˆãƒãƒ³ãƒ‰ãƒ©ã®actionPerfomed()ãƒ¡ã‚½ãƒƒãƒ‰
    public void actionPerformed (ActionEvent e) {
        if (e.getSource() == btn1) {
            prefDisplay();
        } else if (e.getSource() == btn2) {
            txtar1.setText("");
        } else {
            System.exit(0);
        }
    }
    
    //#private void prefDisplay () {
    private void prefDisplay () {
        Statement statement = null;
        ResultSet resultSet = null;
        Connection connection = null;
        
        try {
            //# DBæ¥ç¶š
            Class.forName("org.postgresql.Driver");
            connection = DriverManager.getConnection("jdbc:postgresql://10.136.3.189:5432/jsd_development", "jsd", "pass");
            statement = connection.createStatement();
            
            //# SQLç™ºè¡Œ
            resultSet = statement.executeQuery("SELECT * FROM people");

            //# å€¤ã®å–å¾—
            StringBuffer temp = new StringBuffer();

            while(resultSet.next()){
                int id = resultSet.getInt("id");
                String name = resultSet.getString("name");
                int age = resultSet.getInt("age");
                String address = resultSet.getString("address");
                temp.append(id + " \n" + "    name: " + name + "\n    age: " + age + "\n    address: " + address + "\n\n");
            }

            txtar1.setText(temp.toString());

            //# DBåˆ‡æ–­
            statement.close();
            connection.close();
            connection.close();
            
        } catch(Exception e) {
            System.out.println("ä¾‹å¤–ç™ºç”Ÿï¼š" + e );
        }
    }
}

public class $name {
    public static void main(String args[]){
    
        PrefFrame frm = new PrefFrame("éƒ½é“åºœçœŒãƒã‚¹ã‚¿ãƒ¼");
        //# ãƒ•ãƒ¬ãƒ¼ãƒ ã®è¨­å®š
        frm.setLocation(300,200);
        frm.setSize(250,350);
        frm.setBackground(Color.LIGHT_GRAY);
        frm.setVisible(true);
    }
}
EOS

### ã‚³ãƒ³ãƒ‘ã‚¤ãƒ«
#javac ${name}.java
javac -encoding UTF-8 ${name}.java

### å®Ÿè¡Œ
java -classpath ${classpath} ${name}
------------------

[0;36m  File [0;32m"<ipython-input-1-3970a7d93e74>"[0;36m, line [0;32m12[0m
[0;31m    cat <<- EOS > ${name}.java[0m
[0m                  ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-3970a7d93e74>, line 12)

Executability                            : False
